--- a/exercicio04.html
+++ b/exercicio04.html
@@ -1,17 +1,17 @@
-<!-- 1- Deseja-se criar um sistema para calcular o valor de troco para um caixa de uma loja, onde
-o usuário irá digitar o valor total da compra e o valor pago pelo cliente -->
+<!-- 4 – Faça um sistema para calcular o valor a ser pago por um boleto de cobrança atrasado. Para isso, peça para o usuário digitar o valor do boleto e a quantidade de dias de atraso. Deverá ser calculado 2% de multa de atraso, R$ 2,00 de despesa de cobrança e também 0,5%
+de juros ao dia.-->
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Exercício 1</title>
+        <title>Exercício 4</title>
     </head>
     <body>
-        Valor da compra:
+        Digite o valor do boleto:
         <input type="number" id="txt1"><br/><br/>
-        Valor pago pelo cliente:
+        Digite a quantidade de dias de atraso:
         <input type="number" id="txt2"><br/><br/>
-        <input type="button" value="Troco" onclick="calcular()"/><br/><br/>
-        <input type="button" value="Limpar" onclick="limpar()"/><br/><br/>
+        <input type="button" value="Valor a pagar" onclick="calcular()"><br/><br/>
+        <input type="button" value="Limpar" onclick="limpar()"><br/><br/>
         <div id="resp"></div>
     </body>
     <script>
@@ -21,8 +21,10 @@ o usuário irá digitar o valor total da compra e o valor pago pelo cliente -->
             var r = document.getElementById("resp");
             var n1 = parseFloat(t1.value);
             var n2 = parseFloat(t2.value);
-            var t = n1 - n2;
-            r.innerHTML = "O troco será de " + t.toFixed(2);
+            var juros = n1 * 0.02;
+            var dia = n2 * 0.5;
+            var total = (juros + dia) + 2 + n1;
+            r.innerHTML = "O valor a ser pago será de: R$ " + total.toFixed(2);
         }
         function limpar(){
             var t1 = document.getElementById("txt1");
