--- a/exercicio01.html
+++ b/exercicio01.html
@@ -1,28 +1,30 @@
-<!-- 1- Deseja-se criar um sistema para calcular o valor de troco para um caixa de uma loja, onde
-o usuário irá digitar o valor total da compra e o valor pago pelo cliente -->
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Exercício 1</title>
+        <title>Exercício 01</title>
     </head>
     <body>
-        Valor da compra:
+        Nota 1:
         <input type="number" id="txt1"><br/><br/>
-        Valor pago pelo cliente:
+        Nota 2:
         <input type="number" id="txt2"><br/><br/>
-        <input type="button" value="Troco" onclick="calcular()"/><br/><br/>
+        <input type="button" value="Calcular" onclick="calcular()"/><br/><br/>
         <input type="button" value="Limpar" onclick="limpar()"/><br/><br/>
-        <div id="resp"></div>
+        <div id="resp"></div>       
     </body>
     <script>
         function calcular(){
+            //pega elementos
             var t1 = document.getElementById("txt1");
             var t2 = document.getElementById("txt2");
             var r = document.getElementById("resp");
+            //pega valores
             var n1 = parseFloat(t1.value);
             var n2 = parseFloat(t2.value);
-            var t = n1 - n2;
-            r.innerHTML = "O troco será de " + t.toFixed(2);
+            //calcular
+            var m = (n1 + n2) /2;
+            //mostra o resultado
+            r.innerHTML = "A média foi de: " + m.toFixed(1);
         }
         function limpar(){
             var t1 = document.getElementById("txt1");
@@ -34,6 +36,7 @@ o usuário irá digitar o valor total da compra e o valor pago pelo cliente -->
             resp.innerHTML = "";
             //coloca o foco no input
             t1.focus()
+
         }
     </script>
 </html>
